# CryptoTrading

./: .env.example  .gitignore  Dockerfile.frontend  Dockerfile.record  Dockerfile.retrieval  Dockerfile.serve  README.md  RetrievalVisualizer.jsx  app.py  clean_git.sh  cleanup.sh  deploy-americancloud.sh  deploy.sh  docker-compose-full.yml  docker-compose.yml  docker-push.sh  logs.sh  requirements.txt  result_long_term_forecast.txt  test_db.py  training.ipynb
.agent/: README.md  git_workflow.sh  memory-index.md  pre-commit
.agent/core/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.agent/plans/: lazy-candlestick-loading-plan.md  move-pgvector-store-plan.md  online-learning-plan.md  order-book-analytics-plan.md  order-book-rework-plan.md  polish-embed-service-plan.md  postgres-migration-plan.md  remove-mocks-and-styles-plan.md  retrieval-live-tracking-plan.md  retrieval-service-plan.md  specretf-plan.md
.agent/rules/: memsys.md  memsystem.md
.agent/task-logs/: task-log_2026-06-22-05-56_postgres-migration.md  task-log_2026-06-22-10-04_refactor-adapters-to-domain.md  task-log_2026-06-22-13-52_postgres-migration-complete.md  task-log_2026-06-22-16-30_poetry-to-uv-migration.md  task-log_2026-06-22-20-27_fix-statusmanager-init.md  (+38 more)
.windsurf/: memory.md
docker-entrypoint-initdb.d/: 01-init.sql
frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json  vite.config.js
k8s/: README.md  configmap.yaml  embed-deployment.yaml  embed-service.yaml  embed.yaml  frontend-deployment.yaml  frontend-service.yaml  frontend.yaml  ingress.yaml  jepa-deployment.yaml  jepa-service.yaml  letsencrypt-issuer.yaml  mongo-deployment.yaml  mongo-service.yaml  mongo.yaml  namespace.yaml  portainer-deployment.yaml  portainer-service.yaml  portainer.yaml  predict-deployment.yaml  predict-service.yaml  predict.yaml  pressure-deployment.yaml  pressure-service.yaml  pvc-mongo-data.yaml  pvc-pgdata.yaml  pvc-portainer-data.yaml  pvc.yaml  record-deployment.yaml  record-service.yaml  record.yaml  retrieval-deployment.yaml  retrieval-service.yaml  retrieval.yaml  sentiment-deployment.yaml  sentiment-service.yaml  serve-deployment.yaml  serve-service.yaml  serve.yaml  timescaledb-deployment.yaml  (+4 more)
package/: Dockerfile  dev.sh  pyproject.toml  record.sh
package/cryptotrading/: app.py  config.py  record.py
package/cryptotrading/analysis/: levels.py
package/cryptotrading/data/: book.py  mongo.py
package/cryptotrading/models/: price-prediction-model.py
package/cryptotrading/predict/: price-prediction-model.py
package/cryptotrading/predict/layers/: AdaptiveKernel.py  Diffusion.py  Embed.py  PatchTST_backbone.py  Pyraformer_EncDec.py  SelfAttention.py  StateSpace.py  WaveletTransform.py
package/cryptotrading/predict/loss/: ps.py
package/cryptotrading/predict/models/: Pyraformer.py
package/cryptotrading/rollbit/prices/: __init__.py  price.py  record.py
package/cryptotrading/sentiment/: analyzer.py  deploy.sh  requirements.txt
retrieval/: encoder.py  main.py
rollbit/: Dockerfile  pyproject.toml
rollbit/prices/: analytics.py  formula.py  price.py  record.py
scripts/: migrate_mongo_to_postgres.py  post-to-pr.sh
services/: README.md
services/serve/: Dockerfile  README.md  app.py  data.py  models.py  pyproject.toml  websocket.py
services/serve/routers/: broker.py  market.py  retrieval.py  services.py
src/: .dockerignore  .env.example  README.md  dev.sh  frontend.sh  pyproject.toml  record.sh  result_long_term_forecast.txt  serve.sh
src/cryptotrading/: config.py
src/cryptotrading/analysis/: book.py  levels.py  price.py  retrieval.py
src/cryptotrading/data/: README.md  book.py  factory.py  index.py  models.py  mongo.py  pgvector_store.py  postgres.py  price.py  twitter.py
src/cryptotrading/data/pull/: ccxt.py
src/cryptotrading/predict/: data.py  train.py
src/cryptotrading/predict/exp/: __init__.py  forecast.py  movement.py
src/cryptotrading/predict/layers/: AdaptiveKernel.py  Diffusion.py  Embed.py  FourierCorrelation.py  GatingAttention.py  PatchTST_backbone.py  PatchTST_layers.py  Retrieval.py  S3.py  SelfAttention.py  StateSpace.py  WaveletTransform.py
src/cryptotrading/predict/loss/: ahpa.py  lp.py  ps.py
src/cryptotrading/predict/models/: Autoformer.py  Chronos.py  DLinear.py  ETSFormer.py  Informer.py  Linear.py  Pyraformer.py  RAFT.py  SEMixer.py  TemporalFlow.py  Transformer.py  WAVESTATE.py  __init__.py  chronos.py
src/cryptotrading/predict/utils/: __init__.py  augment.py  dtw.py  gluonts.py  info_metrics.py  losses.py  masking.py  phase_metrics.py  print_args.py  scale.py  tools.py  train.py
src/cryptotrading/rollbit/prices/: __init__.py  book.py  formula.py  metrics.py  price.py
src/cryptotrading/rollbit/prices/record/: service.py
src/cryptotrading/rollbit/prices/serve/: Dockerfile  app.py  pyproject.toml
src/cryptotrading/rollbit/trade/: env.py
src/cryptotrading/sentiment/: .env.example  Dockerfile  analyzer.py  config.yaml  docker-compose.yaml  healthcheck.py  requirements.txt  service_runner.py
src/cryptotrading/trade/: __init__.py  env.py  env_wrapper.py
src/cryptotrading/trade/oracle/: __init__.py  dp_oracle.py  greedy_oracle.py  leveraged_dp_oracle.py  util.py
src/cryptotrading/trade/price/: __init__.py  exchange.py  server.py  simulated.py
src/cryptotrading/trade/strategy/: __init__.py  dp_oracle.py  leveraged_dp_oracle.py  oracle.py  oracle_strategy.py  util.py
src/cryptotrading/util/: __init__.py  book.py  ccxt.py  datetime.py  orchestrator.py  proxy.py  service.py  status.py  typing.py
src/results/test_raft_eval_run/: metrics.npy  pred.npy  true.npy
tests/: test_embed_service.py  test_exchange.py  test_forecaster.py  test_leveraged_dp_oracle.py  test_online_learning.py  test_orchestrator.py  test_order_book_analytics.py  test_pgvector_store.py  test_postgres.py  test_predict_service.py  test_raf_forecaster.py  test_specretf.py  test_train_service.py  test_training_pipeline.py
(+99 files in other folders)
