[tool.poetry]
name = "cryptotrading"
version = "0.1.1"
description = "Crypto trading services"
authors = ["Miles <miles@resatiate.com>"]
readme = "README.md"
packages = [
    { include = "cryptotrading" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32"
pytz = "^2024"
pymongo = "^4.11.2"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
motor = "^3.7.0"
six = "^1.17.0"
numpy = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.11"}
python-dotenv = "^1.1.0"
ccxt = "^4.5.5"
exceptiongroup = "^1.2.2"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
