[project]
name = "cryptotrading"
version = "0.1.2"
description = "Crypto trading services"
authors = [
    { name = "Miles", email = "miles@resatiate.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "pytz>=2024",
    "pymongo>=4.11.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "motor>=3.7.0",
    "six>=1.17.0",
    "numpy>=2.2.3",
    "fastapi[standard]>=0.115.11",
    "python-dotenv>=1.1.0",
    "ccxt>=4.5.5",
    "exceptiongroup>=1.2.2",
    "typing-extensions>=4.12.2",
    "annoy>=1.17.3",
    "asyncpg>=0.27.0",
    "psycopg2-binary>=2.9.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.11.3",
    "pgvector>=0.2.0",
    "scipy>=1.15.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptotrading"]
