[project]
name = "cryptotrading"
version = "0.1.4"
description = "Crypto trading services"
authors = [
    { name = "Miles", email = "miles@resatiate.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "pytz>=2024",
    "pymongo>=4.11.2",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "motor>=3.7.0",
    "six>=1.17.0",
    "numpy>=2.2.3",
    "fastapi[standard]>=0.115.11",
    "python-dotenv>=1.1.0",
    "ccxt>=4.5.5",
    "exceptiongroup>=1.2.2",
    "typing-extensions>=4.12.2",
    "annoy>=1.17.3",
    "asyncpg>=0.27.0",
    "psycopg2-binary>=2.9.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.11.3",
    "pgvector>=0.2.0",
    "scipy>=1.15.3",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
ml = [
    "torch>=2.12.1",
    "transformers>=5.13.1",
    "scikit-learn>=1.7.2",
    "einops>=0.8.2",
    "pmdarima>=2.1.1",
    "numba>=0.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptotrading"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

